# tododo

./: .gitignore  README.md  docker-compose.yml
tododo-api/: Dockerfile  pyproject.toml
tododo-api/app/: database.py  main.py  schemas.py
tododo-api/app/crud/: todo.py
tododo-api/app/routers/: __init__.py  route_todo.py  todo.py
tododo-api/app/schemas/: todo.py
